# uipsesmodel

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx
Frontend/src/components/: Navbar.jsx
api/database/: docker-compose.yml
api/node/: createtable.js  index.js  scrape.js
api/node/model/: defaultCategory.json  pgDBconnction.json  userModel.js
api/node/model/query/: selectUser.js  updateUserAttribute.js
app/: page.jsx
app/api/auth/: route.js
app/api/login/: route.js
app/api/search/: route.js
app/components/: navbar.jsx
app/components/ui/: background-gradient-animation.jsx
app/dashboard/: page.jsx
app/signup/: page.jsx
lib/query/: users
lib/utils/: db.js
lib/utils/functions/: duckduckgo.js  wikiapicall.js
python-api-search/: main.py
tests/: document1.txt  document2.txt  document3.txt  gensim_lsa_implementation.py  scrapingtags.py  spaCytrials.py  useless_words_filter.py  website_tag_finder.py
